syntax = "proto3";

package blog;

option go_package = "./blogs";

message Post {
    string PostID  = 1;
    string Title = 2;
    string Content = 3;
    string Author = 4;
    string Publication_date = 5;
    string Modification_date=6;
    repeated string Tags = 7;
}

service BlogPost {
    rpc CreatePost(Post) returns (Post);
    rpc ReadPost(ReadPostRequest) returns (Post);
    rpc UpdatePost(UpdatePostRequest) returns (Post);
    rpc DeletePost(DeletePostRequest) returns (DeletePostResponse);
}

message ReadPostRequest {
    string PostID = 1;
}

message UpdatePostRequest {
    string PostID  = 1;
    string Title = 2;
    string Content = 3;
    string Author = 4;
    string Modification_date=5;
    repeated string Tags = 6;
}

message DeletePostRequest {
    string PostID = 1;
}

message DeletePostResponse {
    bool Success = 1;
    string Message=2;
}
